[gd_scene load_steps=2 format=2]

[ext_resource path="res://rooms/login/login.gd" type="Script" id=1]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75

[node name="Login" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TxtEmail" type="LineEdit" parent="TabContainer/Login"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.35
margin_top = 26.0
margin_bottom = 26.0
max_length = 16

[node name="LblEmail" type="Label" parent="TabContainer/Login/TxtEmail"]
grow_vertical = 0
text = "Email"

[node name="TxtPassword" type="LineEdit" parent="TabContainer/Login"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.6
secret = true

[node name="LblPassword" type="Label" parent="TabContainer/Login/TxtPassword"]
grow_vertical = 0
text = "Password"

[node name="BtnLogin" type="Button" parent="TabContainer/Login"]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.8
text = "Login"

[node name="LoginGuest" type="Tabs" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TxtGuestUsername" type="LineEdit" parent="TabContainer/LoginGuest"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.35
margin_top = 26.5928
margin_bottom = 26.5928
max_length = 16

[node name="LblGuestUsername" type="Label" parent="TabContainer/LoginGuest/TxtGuestUsername"]
grow_vertical = 0
text = "Username"

[node name="LblGuestUsername2" type="Label" parent="TabContainer/LoginGuest/TxtGuestUsername"]
anchor_bottom = 1.0
grow_horizontal = 0
text = "Guest_"
valign = 1

[node name="BtnLoginGuest" type="Button" parent="TabContainer/LoginGuest"]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.8
text = "Play as Guest"

[node name="Register" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 24.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TxtRegisterUsername" type="LineEdit" parent="TabContainer/Register"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.35
margin_top = -26.0
margin_bottom = -26.0
max_length = 16

[node name="LblRegisterUsername" type="Label" parent="TabContainer/Register/TxtRegisterUsername"]
grow_vertical = 0
text = "Username"

[node name="TxtRegisterEmail" type="LineEdit" parent="TabContainer/Register"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.35
margin_top = 26.5928
margin_bottom = 26.5928
max_length = 16

[node name="LblRegisterEmail" type="Label" parent="TabContainer/Register/TxtRegisterEmail"]
grow_vertical = 0
text = "Email"

[node name="TxtRegisterPassword" type="LineEdit" parent="TabContainer/Register"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.6
secret = true

[node name="LblRegisterPassword" type="Label" parent="TabContainer/Register/TxtRegisterPassword"]
grow_vertical = 0
text = "Password"

[node name="TxtRegisterPasswordRepeat" type="LineEdit" parent="TabContainer/Register"]
editor/display_folded = true
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.6
margin_top = 52.0
margin_bottom = 52.0
secret = true

[node name="LblRegisterPasswordRepeat" type="Label" parent="TabContainer/Register/TxtRegisterPasswordRepeat"]
grow_vertical = 0
text = "Repeat Password"

[node name="BtnRegister" type="Button" parent="TabContainer/Register"]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.8
margin_top = 52.0
margin_bottom = 52.0
text = "Register"

[node name="LblWhy" type="Label" parent="."]
anchor_left = 0.8
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.75
text = "Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder
Why register placeholder"

[node name="DbgLogin" type="Button" parent="."]
visible = false
margin_left = 24.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 90.0
disabled = true
text = "login as lerrr"
